# PacketQL

./: .gitignore  CLAUDE.md  CONTRACTS.md  INTERVIEW.md  README.md  RESUME.md  RUNBOOK.md  conftest.py  demo.py  demo_capture.py  demo_columnar.py  demo_index.py  demo_offline.py  demo_query.py  pyproject.toml  query.py  query_client.py
benchmarks/: REPORT.md  benchmark_suite.py
dashboard/: README.md  bridge.py  index.html
packetql/: __init__.py  schema.py  server.py
packetql/capture/: __init__.py  parser.py  pcap.py  pipeline.py  ringbuffer.py
packetql/index/: __init__.py  access.py  bitmap.py  hash_index.py  indexes.py  topn.py  trie.py
packetql/query/: __init__.py  ast.py  executor.py  lexer.py  parser.py  planner.py
packetql/storage/: __init__.py  columnar.py
tests/: test_aggregate.py  test_benchmarks.py  test_bridge.py  test_capture.py  test_columnar.py  test_index.py  test_parser.py  test_query.py  test_server.py  test_storage.py
tests/fixtures/: sample.pcap
tools/: __init__.py  make_fixture_pcap.py  make_sample_pcap.py
